--- a/demo/src/main/res/layout/activity_demo.xml
+++ b/demo/src/main/res/layout/activity_demo.xml
@@ -74,12 +74,12 @@
 
         </LinearLayout>
 
-        <ListView
+        <android.support.v7.widget.RecyclerView
             android:id="@+id/list"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1">
-        </ListView>
+        </android.support.v7.widget.RecyclerView>
 
         <!--<ScrollView-->
             <!--android:id="@+id/sv"-->
